[tool.poetry]
name = "pyixapi"
version = "0.2.2"
description = "Python API client library for IX-API"
authors = ["Guillaume Mazoyer <oss@mazoyer.eu>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{ include = "pyixapi" }]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.8"
PyJWT = ">=2.4.0,<2.9"
requests = ">=2.20.0,<3.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "~0.2"

[tool.ruff]
line-length = 88

exclude = [
    ".git",
    ".tox",
    ".venv",
    "env",
    "_build",
    "build",
    "dist",
    "examples",
    "__main__.py",
]

[tool.ruff.lint]
preview = true

select = [
    "C90", # mccabe complexity
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort-like checks
    "DTZ", # flake8-datetimez
    "ICN", # flake8-import-conventions
    "TCH", # flake8-type-checking
    "T10", # flake8-debugger
    "Q",   # flake8-quotes
    "YTT", # flake8-2020
]

task-tags = ["FIXME", "TODO", "XXX"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["pyixapi"]

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.lint.mccabe]
max-complexity = 31

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
